not_in_use/plex/plex-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-media-server-ingress
  namespace: jellyfin
  labels:
    app: plex-media-server
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-redirect-from: /
    nginx.ingress.kubernetes.io/proxy-redirect-to: /
spec:
  ingressClassName: nginx
  rules:
    - host: "plex.homelab"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homelab-plex-media-server
                port:
                  number: 32400
